Fixing yearsldie on small screen

--- a/src/components/AboutSection/style.module.scss
+++ b/src/components/AboutSection/style.module.scss
@@ -9,6 +9,7 @@
     background-repeat: no-repeat;
     position: relative;
     height: 100vh;
+    overflow-x: hidden;
 
     @include mq(tablet, max) {
       height: auto;
